# Steam-Quick-Switch

./: .gitattributes  .gitignore  DEVELOPMENT.md  README.md  RELEASING.md  index.html  package-lock.json  package.json
.claude/: CLAUDE.MD
.github/workflows/: audit.yml  release.yml
docs/: FEATURE-TRACKING.md
scripts/: update-readme-version.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: i18n.rs  lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/steam/: accounts.rs  avatar.rs  mod.rs  registry.rs  switch.rs  vdf.rs
src/components/: AccountSwitcher.tsx  NicknamePopup.tsx  Settings.tsx
src/i18n/: de.json  en.json  index.ts
src/lib/: api.ts  settings.ts  updater.ts
