[package]
name = "steam-quick-switch"
version = "0.1.0"
description = "Quickly switch between signed-in Steam accounts from the system tray."
authors = ["Benny"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "steam_quick_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyvalues-parser = "0.2.4"
winreg = "0.56.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
base64 = "0.22.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
sys-locale = "0.3.2"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

